Remove screenshot handling

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
             <div class="headerBackground">
                 <div class="container">
                     {% include header.html %}
-                    <div class="iphonePreview">
+                    <div>
 
                         <div class="videoContainer hidden">
                             <video class="screenvideo" autoplay="autoplay" controls="controls">
