--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -20,6 +20,10 @@
 	background-color: rgba($header-color, $header-transparency);
 }
 
+.downloadBanner {
+	width: 300px;
+}
+
 @media only screen and (max-width: 768px) {
 
 	.headerBackground {
