--- a/_includes/githubreleases.html
+++ b/_includes/githubreleases.html
@@ -8,15 +8,16 @@ $(function() {
 
     $.getJSON(apiURL, function(json) {
         console.log(json)
-        if (json && json.name) {
+        if (json && json.name && json.tag_name) {
             var releaseName = json.name
+            var tagName = json.tag_name
             console.info("Release download urls loaded from Github API.");
 
             // Set Mac download link if it is not set manually in _config.yml
             var $macLink = $(".macLink");
             if ($.trim($macLink.attr('href')).length == 0) {
                 //https://github.com/michaelmuenzer/gu-assistant/releases/download/v0.0.20/GU-Assistant-0.0.20.dmg
-                var downloadUrl = 'https://github.com/michaelmuenzer/gu-assistant/releases/download/v' + releaseName + '/GU-Assistant-' + releaseName + '.dmg'
+                var downloadUrl = 'https://github.com/michaelmuenzer/gu-assistant/releases/download/' + tagName + '/GU-Assistant-' + releaseName + '.dmg'
                 $($macLink).attr("href", downloadUrl);
             }
 
@@ -24,7 +25,7 @@ $(function() {
             var $winLink = $(".winLink");
             if ($.trim($winLink.attr('href')).length == 0) {
                 // https://github.com/michaelmuenzer/gu-assistant/releases/download/v0.0.20/GU-Assistant-Setup-0.0.20.exe
-                var downloadUrl = 'https://github.com/michaelmuenzer/gu-assistant/releases/download/v' + releaseName + '/GU-Assistant-Setup-' + releaseName + '.exe'
+                var downloadUrl = 'https://github.com/michaelmuenzer/gu-assistant/releases/download/' + tagName + '/GU-Assistant-Setup-' + releaseName + '.exe'
                 $($winLink).attr("href", downloadUrl);
             }
         }
