--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -47,7 +47,7 @@
 	grid-column-gap: 30px;
 	grid-template-areas: 
 		"h h h h h h h h h h h h"
-		"p p p p p i i i i i i i"
+		"p p p i i i i i i i i i"
 		"c c c c c c c c c c c c"
 		"f f f f f f f f f f f f";
 }
@@ -402,13 +402,13 @@ nav > ul li a:active {
 @media only screen and (max-width: 1070px) {
 
 	.videoContainer {
-		width: 322px;
+		width: 400px;
 		margin-left: 24px;
 		margin-top: 22px;
 	}
 	
 	.videoContainer > video {
-		width: 322px;
+		width: 400px;
 	}
 	
 } 
