--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -371,10 +371,6 @@ footer {
 			"f f f f f f f f f f f f";
 	}
 
-	.headerBackground {
-		height: 150px;
-	}
-
 	.features {
 		flex-grow: 1;
 		flex-direction: row;
@@ -435,7 +431,9 @@ footer {
 	.videoContainer {
 		width: 700px;
 		margin-left: 0px;
-		margin-top: 17px;
+		margin-top: 210px;
+		margin-top: 216
+		px;
 	}
 
 	.videoContainer > video {
@@ -458,8 +456,7 @@ footer {
 
 	.videoContainer {
 		width: 400px;
-		margin-left: 0px;
-		margin-top: 17px;
+		margin-top: -170px;
 	}
 
 	.videoContainer > video {
@@ -544,8 +541,6 @@ footer {
 	
 	.videoContainer {
 		width: 300px;
-		margin-left: 0px;
-		margin-top: 17px;
 	}
 
 	.videoContainer > video {
