--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,6 +54,7 @@
                         </div>
                     </div>
                     {% include features.html %}
+                    {% include faq.html %}
                     {% include footer.html %}
                     {% include appstoreimages.html %}
                     {% include githubreleases.html %}
