--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -41,6 +41,7 @@
 		"h h h h h h h h h h h h"
 		"p p i i i i i i i i i i"
 		"c c c c c c c c c c c c"
+		"q q q q q q q q q q q q"
 		"f f f f f f f f f f f f";
 }
 
@@ -272,13 +273,7 @@ nav > ul li a:active {
 }
 
 .questions {
-	grid-area: c;
-	display: flex;
-	flex: 0 1 auto;
-	align-content: flex-start;
-	justify-content: flex-start;
-	flex-grow: 1;
-	flex-wrap: wrap;
+	grid-area: q;
 	margin-top: 93px;
 }
 
