Style FAQ header

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -277,6 +277,12 @@ nav > ul li a:active {
 	margin-left: 8px;
 }
 
+.questions > h1 {
+	margin-top: 32px;
+	width: 100%;
+    text-align: center;
+}
+
 details {
 	margin-bottom: 16px;
 }
