--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -277,8 +277,8 @@ nav > ul li a:active {
 	margin-left: 8px;
 }
 
-.questions > h1 {
-	margin-top: 32px;
+.questions > h2 {
+	margin-bottom: 16px;
 	width: 100%;
     text-align: center;
 }
