Add grid-layout for lower resolution

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -394,6 +394,7 @@ footer {
 			"i i i i i i i i i i i i"
 			"p p p p p p p p p p p p"
 			"c c c c c c c c c c c c"
+			"q q q q q q q q q q q q"
 			"f f f f f f f f f f f f";
 	}
 
